k2s/test/e2e/addons/gateway-nginx/workloads/gateway-api-test-linux-albums.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albums-linux1
  namespace: gateway-api-test
spec:
  selector:
    matchLabels:
      app: albums-linux1
  replicas: 1
  template:
    metadata:
      labels:
        app: albums-linux1
    spec:
      containers:
        - name: albums-linux1
          image: shsk2s.azurecr.io/example.albums-golang-linux:v1.0.0
          ports:
            - containerPort: 80
          env:
            - name: PORT
              value: "80"
            - name: RESOURCE
              value: "albums-linux1" 
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: albums-linux1
  namespace: gateway-api-test
spec:
  selector:
    app: albums-linux1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: albums-linux1
  namespace: gateway-api-test
spec:
  parentRefs:
  - name:  gateway
    namespace: nginx-gateway
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /albums-linux1
    backendRefs:
    - name: albums-linux1
      port: 80
