k2s/test/e2e/addons/gateway-nginx/workloads/gateway-api-test-namespace.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-test
