k2s/test/e2e/addons/gateway-nginx/workloads/kustomization.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- gateway-nginx-test-namespace.yaml
- gateway-nginx-test-linux-albums.yaml
